--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,4 +35,16 @@ body {
   }
 }
 
+@media (max-width: 980px) {
+  .slider-row {
+    max-width: 700px !important;
+  }
+}
+
+@media (min-width: 981px) {
+  .slider-row {
+    max-width: 1160px !important;
+  }
+}
+
 @import "./pages/Landing";
